--- a/styles/shopmodules/Cart.module.css
+++ b/styles/shopmodules/Cart.module.css
@@ -16,7 +16,7 @@
     padding: 0;
     margin: 0;
     max-height: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
     .cartList li:nth-child(even) {
